--- a/typing/MainWindow.xaml
+++ b/typing/MainWindow.xaml
@@ -7,7 +7,9 @@
         xmlns:System="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
         Title="Typing"
-        Height="600" Width="1000" MinWidth="820" MinHeight="550">
+        Height="600" Width="1000" MinWidth="820" MinHeight="550"
+        PreviewKeyDown="Window_PreviewKeyDown"
+        Closed="MainWindow_Closed">
     <Window.Resources>
     <ResourceDictionary>
         <ResourceDictionary.MergedDictionaries>
