--- a/typing/ResultPage.xaml
+++ b/typing/ResultPage.xaml
@@ -23,6 +23,8 @@
             <RowDefinition Height="40"/>
             <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
+
+
         <Button Click="retry" FontSize="20" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="1" Content="リトライ" Style="{DynamicResource Button}"/>
         <Button Click="Go_home" FontSize="20" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="2" Content="ホーム" Style="{DynamicResource Button}"/>
         <Grid Grid.Row="0" Margin="0,0,0,0">
@@ -33,7 +35,7 @@
                 <RowDefinition Height="5*"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <TextBlock Text="お疲れ様でした" FontSize="60" TextAlignment="Center" Grid.Row="1"  VerticalAlignment="Center" FontFamily="Noto Sans Light,Noto Sans JP" Height="80" Foreground="{DynamicResource cFontcolor}"/>
+            <TextBlock x:Name="message" Text="お疲れ様でした" FontSize="60" TextAlignment="Center" Grid.Row="1"  VerticalAlignment="Center" FontFamily="Noto Sans Light,Noto Sans JP" Height="80" Foreground="{DynamicResource cFontcolor}"/>
 
             <ScrollViewer Grid.Row="3" VerticalScrollBarVisibility="Auto" CanContentScroll="True" Margin="50,0,50,0">
                 <Grid Margin="0,0,0,0">
@@ -75,6 +77,7 @@
                 </Grid>
 
             </ScrollViewer>
+
         </Grid>
     </Grid>
 </Page>
