--- a/typing/MainWindow.xaml
+++ b/typing/MainWindow.xaml
@@ -12,8 +12,9 @@
         Closed="MainWindow_Closed">
     <Window.Resources>
     <ResourceDictionary>
-        <ResourceDictionary.MergedDictionaries>
-            <ResourceDictionary Source="colorthemes/default.xaml"/>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="elements.xaml"/>
+                <ResourceDictionary Source="colorthemes/default.xaml"/>
         </ResourceDictionary.MergedDictionaries>
     </ResourceDictionary>
     </Window.Resources>
