--- a/typing/colorthemes/lightgreen.xaml
+++ b/typing/colorthemes/lightgreen.xaml
@@ -3,27 +3,27 @@
                     xmlns:local="clr-namespace:typing">
 
     <!--colors-->
-    <Brush x:Key="cTopbarBackground">#EFE7D8D8</Brush>
+    <Brush x:Key="cTopbarBackground">#EF67C8B8</Brush>
 
-    <Brush x:Key="cPbarBackground">#FFE1EFFB</Brush>
+    <Brush x:Key="cPbarBackground">#FFE4EFFF</Brush>
     <Brush x:Key="cPbarForeground">#FF516F9B</Brush>
 
-    <Brush x:Key="cPauseBackground">#EFFE3858</Brush>
-    <Brush x:Key="cPauseFontcolor">#FF000000</Brush>
+    <Brush x:Key="cPauseBackground">#EFFF5859</Brush>
+    <Brush x:Key="cPauseFontcolor">#FF111111</Brush>
 
-    <Brush x:Key="cBackground">#FBD6DFDB</Brush>
-    <Brush x:Key="cFontcolor">#FF000000</Brush>
-    <Brush x:Key="cFrameBackground">#FFECFFF9</Brush>
+    <Brush x:Key="cBackground">#FFD7F2EB</Brush>
+    <Brush x:Key="cFontcolor">#FF221133</Brush>
+    <Brush x:Key="cFrameBackground">#FFDCFFF8</Brush>
 
-    <Brush x:Key="cButtonBackground">#FFD7DFEB</Brush>
+    <Brush x:Key="cButtonBackground">#FFD7FFEB</Brush>
     <Brush x:Key="cButtonFontcolor">#FF001010</Brush>
     <Brush x:Key="cButtonBrush">#FF858A9B</Brush>
     
-    <Brush x:Key="coButtonBackground">#FFA5DFEB</Brush>
-    <Brush x:Key="coButtonFontcolor">#FF862050</Brush>
+    <Brush x:Key="coButtonBackground">#FFE7FFFB</Brush>
+    <Brush x:Key="coButtonFontcolor">#FF992080</Brush>
     <Brush x:Key="coButtonBrush">#FF858ABB</Brush>
 
-    <Brush x:Key="cpButtonBackground">#FFE5DFEB</Brush>
+    <Brush x:Key="cpButtonBackground">#FFD7FFFB</Brush>
     <Brush x:Key="cpButtonFontcolor">#FFB59F8B</Brush>
     <Brush x:Key="cpButtonBrush">#FF522E22</Brush>
 
@@ -32,4 +32,7 @@
     <Brush x:Key="c1LogBackground">#FFF2DFF9</Brush>
     <Brush x:Key="c2LogBackground">#FFFBEFE9</Brush>
 
+    <!--colors-->
+    <Brush x:Key="cBackimgCover">#B2E9FFEB</Brush>
+    
 </ResourceDictionary>
