--- a/typing/colorthemes/dark.xaml
+++ b/typing/colorthemes/dark.xaml
@@ -35,5 +35,10 @@
     
     <!--colors-->
     <Brush x:Key="cBackimgCover">#B2191526</Brush>
+
+    <!--colors-->
+    <Brush x:Key="cAreaTrue">#FF0000FF</Brush>
+    <Brush x:Key="cAreaFalse">#FFFF0000</Brush>
+    <Brush x:Key="cAreaDef">#FF000000</Brush>
     
 </ResourceDictionary>
