--- a/typing/colorthemes/lightgreen.xaml
+++ b/typing/colorthemes/lightgreen.xaml
@@ -34,5 +34,10 @@
 
     <!--colors-->
     <Brush x:Key="cBackimgCover">#B2E9FFEB</Brush>
+
+    <!--colors-->
+    <Brush x:Key="cAreaTrue">#FF0000FF</Brush>
+    <Brush x:Key="cAreaFalse">#FFFF0000</Brush>
+    <Brush x:Key="cAreaDef">#FF000000</Brush>
     
 </ResourceDictionary>
