--- a/typing/colorthemes/yellow.xaml
+++ b/typing/colorthemes/yellow.xaml
@@ -35,4 +35,9 @@
     <!--colors-->
     <Brush x:Key="cBackimgCover">#B2FFFCAA</Brush>
 
+    <!--colors-->
+    <Brush x:Key="cAreaTrue">#FF0000FF</Brush>
+    <Brush x:Key="cAreaFalse">#FFFF0000</Brush>
+    <Brush x:Key="cAreaDef">#FF000000</Brush>
+
 </ResourceDictionary>
