--- a/typing/MainWindow.xaml
+++ b/typing/MainWindow.xaml
@@ -15,6 +15,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="elements.xaml"/>
                 <ResourceDictionary Source="colorthemes/default.xaml"/>
+                <ResourceDictionary Source="languages/japanese.xaml"/>
         </ResourceDictionary.MergedDictionaries>
     </ResourceDictionary>
     </Window.Resources>
