--- a/typing/SettingPage.xaml
+++ b/typing/SettingPage.xaml
@@ -44,6 +44,7 @@
                     <RowDefinition Height="50"/>
                     <RowDefinition Height="50"/>
                     <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
@@ -52,29 +53,28 @@
                     <ColumnDefinition Width="50"/>
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Row="0" Grid.Column="0" FontSize="20" VerticalAlignment="Center" Foreground="{DynamicResource cFontcolor}">ユーザー名</TextBlock>
+                <TextBlock Grid.Row="0" Grid.Column="0" FontSize="20" VerticalAlignment="Center" Foreground="{DynamicResource cFontcolor}" Text="{DynamicResource tsUserName}"></TextBlock>
                 <TextBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" FontSize="20" Height="30" x:Name="username"/>
 
-                <TextBlock Grid.Row="1" Grid.Column="0" FontSize="20" VerticalAlignment="Center" Foreground="{DynamicResource cFontcolor}">標準の問題フォルダ</TextBlock>
+                <TextBlock Grid.Row="1" Grid.Column="0" FontSize="20" VerticalAlignment="Center" Foreground="{DynamicResource cFontcolor}" Text="{DynamicResource tsSerchDir}"></TextBlock>
                 <TextBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" FontSize="20" Height="30" x:Name="serchdir"/>
 
-                <TextBlock Grid.Row="2" Grid.Column="0" FontSize="20" VerticalAlignment="Center" Foreground="{DynamicResource cFontcolor}">キーボードのファイル</TextBlock>
-                <TextBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" FontSize="20" Height="30" x:Name="keyboarddir"/>
+                <TextBlock Grid.Row="2" Grid.Column="0" FontSize="20" VerticalAlignment="Center" Foreground="{DynamicResource cFontcolor}" Text="{DynamicResource tsKeyboardFiles}"></TextBlock>
+                <TextBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" FontSize="20" Height="30" x:Name="keyboardfiles"/>
 
-                <TextBlock Grid.Row="3" Grid.Column="0" FontSize="20" VerticalAlignment="Center" Foreground="{DynamicResource cFontcolor}">表示サイズ</TextBlock>
+                <TextBlock Grid.Row="3" Grid.Column="0" FontSize="20" VerticalAlignment="Center" Foreground="{DynamicResource cFontcolor}" Text="{DynamicResource tsScale}"></TextBlock>
                 <Slider Grid.Row="3" Grid.Column="1" Width="200" VerticalAlignment="Center" x:Name="scale" Minimum="0.5" Maximum="1.7" IsSnapToTickEnabled="True" TickFrequency="0.01" SmallChange="0.05" LargeChange="0.1"/>
                 <TextBlock Grid.Row="3" Grid.Column="2" x:Name="show_scale" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16">
                 <Run Text="{Binding ElementName=scale,Path=Value}"/>
-                <Run Text="倍"/>
                 </TextBlock>
 
-                <TextBlock Grid.Row="4" Grid.Column="0" FontSize="20" VerticalAlignment="Center" Foreground="{DynamicResource cFontcolor}">カラーテーマ</TextBlock>
+                <TextBlock Grid.Row="4" Grid.Column="0" FontSize="20" VerticalAlignment="Center" Foreground="{DynamicResource cFontcolor}" Text="{DynamicResource tsColorTheme}"></TextBlock>
                 <ComboBox Grid.Row="4" Grid.Column="1" HorizontalAlignment="Center" Grid.ColumnSpan="2" x:Name="colortheme" VerticalAlignment="Center" Width="250" SelectedValuePath="Key" DisplayMemberPath="Value" />
 
-                <TextBlock Grid.Row="5" Grid.Column="0" FontSize="20" VerticalAlignment="Center" Foreground="{DynamicResource cFontcolor}">言語</TextBlock>
+                <TextBlock Grid.Row="5" Grid.Column="0" FontSize="20" VerticalAlignment="Center" Foreground="{DynamicResource cFontcolor}" Text="{DynamicResource tsLangTheme}"></TextBlock>
                 <ComboBox Grid.Row="5" Grid.Column="1" HorizontalAlignment="Center" Grid.ColumnSpan="2" x:Name="langtheme" VerticalAlignment="Center" Width="250" SelectedValuePath="Key" DisplayMemberPath="Value" />
 
-                <TextBlock Grid.Row="6" Grid.Column="0" FontSize="20" VerticalAlignment="Center" Foreground="{DynamicResource cFontcolor}">POSTするURL</TextBlock>
+                <TextBlock Grid.Row="6" Grid.Column="0" FontSize="20" VerticalAlignment="Center" Foreground="{DynamicResource cFontcolor}" Text="{DynamicResource tsPostUrl}"></TextBlock>
                 <TextBox Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="2" FontSize="20" Height="30" x:Name="posturl"/>
 
             </Grid>
